--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -7,8 +7,8 @@ import GridWrapper from "./GridWrapper.astro";
 <section id="mission">
   <GridWrapper>
     <div class="text-wrapper">
-      <p class="category">Our <span class="color">mission</span></p>
-      <h2 class="headline">絶え間なく&NewLine;宇宙を&NewLine;照らし続ける</h2>
+      <h2 class="category">Our <span class="color">mission</span></h2>
+      <h3 class="headline">絶え間なく&NewLine;宇宙を&NewLine;照らし続ける</h3>
       <p class="paragraph">
         <span class="bg-line">私たちは太陽系の中心にある存在として、</span>
         <span class="bg-line"
