--- a/src/components/Partnership.astro
+++ b/src/components/Partnership.astro
@@ -6,9 +6,9 @@ import GridWrapper from "./GridWrapper.astro";
 <section id="partnerships">
   <GridWrapper>
     <div class="text-wrapper">
-      <p class="category">Our <span class="color">partnerships</span></p>
-      <h2 class="headline"><span class="number">46</span>億年の歴史</h2>
-      <h3 class="sub-headline">私たちと地球の関係</h3>
+      <h2 class="category">Our <span class="color">partnerships</span></h2>
+      <h3 class="headline"><span class="number">46</span>億年の歴史</h3>
+      <h4 class="sub-headline">私たちと地球の関係</h4>
       <p class="paragraph">
         私たちは、46億年にわたり、<br role="none" />
         地球に不可欠なエネルギーと<br role="none" />
