--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -19,7 +19,7 @@ import Card from "./Card.astro";
     </div>
     <div class="text-wrapper">
       <p class="number">1</p>
-      <h2 class="headline">光</h2>
+      <h3 class="headline">光</h3>
       <p class="paragraph">
         <span class="bg-line">私たちの光は、</span>
         <span class="bg-line">休むことなく世界を明るく照らし続けます。</span>
@@ -30,7 +30,7 @@ import Card from "./Card.astro";
     </div>
     <Card src="/images/card1" alt="上空から見た風景" className="card-position1">
       <div class="card__text-wrapper">
-        <h3 class="card__title">世界規模のサービス提供</h3>
+        <h4 class="card__title">世界規模のサービス提供</h4>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line">常に地球の半分に明るい光を提供し、</span
@@ -45,7 +45,7 @@ import Card from "./Card.astro";
       className="card-position1"
     >
       <div class="card__text-wrapper">
-        <h3 class="card__title">光合成サポート</h3>
+        <h4 class="card__title">光合成サポート</h4>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line">植物の成長に最適化された </span><br
@@ -67,7 +67,7 @@ import Card from "./Card.astro";
       className="card-position1"
     >
       <div class="card__text-wrapper">
-        <h3 class="card__title">高度な視覚強化</h3>
+        <h4 class="card__title">高度な視覚強化</h4>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line">生物の視覚システムに</span><br
@@ -89,7 +89,7 @@ import Card from "./Card.astro";
       className="card-position1"
     >
       <div class="card__text-wrapper">
-        <h3 class="card__title">気分の向上</h3>
+        <h4 class="card__title">気分の向上</h4>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line">私たちの光は機能的なだけでなく、</span><br
@@ -114,11 +114,11 @@ import Card from "./Card.astro";
     </div>
     <div class="text-wrapper">
       <p class="number">2</p>
-      <h2 class="headline">熱</h2>
+      <h3 class="headline">熱</h3>
       <p class="paragraph">
         <span class="bg-line">核融合反応から生まれた太陽放射によって、 </span>
         <span class="bg-line">地球にもたらされた熱は、</span>
-        <span class="bg-line"
+        <span class="bg-line" 4
           >地球のエネルギーバランスの中核を担っています。</span
         >
         <span class="bg-line">私たちがもたらす熱は、</span>
@@ -132,7 +132,7 @@ import Card from "./Card.astro";
       className="card-position1"
     >
       <div class="card__text-wrapper">
-        <h3 class="card__title">気候調整</h3>
+        <h4 class="card__title">気候調整</h4>
         <p class="card__tag card__tag--walm">Heat</p>
         <p class="card__paragraph">
           <span class="card__bg-line">地球の気候システムの原動力となり、</span
@@ -146,7 +146,7 @@ import Card from "./Card.astro";
     >
     <Card src="/images/card6" alt="巨大な雲と虹" className="card-position1">
       <div class="card__text-wrapper">
-        <h3 class="card__title">大気のダイナミクス</h3>
+        <h4 class="card__title">大気のダイナミクス</h4>
         <p class="card__tag card__tag--walm">Heat</p>
         <p class="card__paragraph">
           <span class="card__bg-line"
@@ -162,7 +162,7 @@ import Card from "./Card.astro";
     >
     <Card src="/images/card7" alt="空から眺める海" className="card-position1"
       ><div class="card__text-wrapper">
-        <h3 class="card__title">海流の活性化</h3>
+        <h4 class="card__title">海流の活性化</h4>
         <p class="card__tag card__tag--walm">Heat</p>
         <p class="card__paragraph">
           <span class="card__bg-line"
@@ -181,7 +181,7 @@ import Card from "./Card.astro";
       className="card-position1"
     >
       <div class="card__text-wrapper">
-        <h3 class="card__title">季節の多様性</h3>
+        <h4 class="card__title">季節の多様性</h4>
         <p class="card__tag card__tag--walm">Heat</p>
         <p class="card__paragraph">
           <span class="card__bg-line"
