見出し要素のスクリーンリーダー読み上げ改善

--- a/src/components/ButtonMenu.astro
+++ b/src/components/ButtonMenu.astro
@@ -18,12 +18,12 @@
   <nav id="menu-nav" hidden>
     <ul id="menu-list" role="menu">
       <li role="none"><a href="#top" role="menuitem">Top</a></li>
-      <li role="none"><a href="#mission" role="menuitem">Our mission</a></li>
+      <li role="none"><a href="#mission" role="menuitem">Our Mission</a></li>
       <li role="none">
-        <a href="#solutions" role="menuitem">Our solutions</a>
+        <a href="#solutions" role="menuitem">Our Solutions</a>
       </li>
       <li role="none">
-        <a href="#partnerships" role="menuitem">Our partnerships</a>
+        <a href="#partnerships" role="menuitem">Our Partnerships</a>
       </li>
     </ul>
   </nav>
