--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,9 +13,9 @@ import P5Sketch from "./P5Sketch.astro";
       </p>
     </address>
     <ul>
-      <li><a href="#mission">Our mission</a></li>
-      <li><a href="#solutions">Our solutions</a></li>
-      <li><a href="#partnerships">Our partnerships</a></li>
+      <li><a href="#mission">Our Mission</a></li>
+      <li><a href="#solutions">Our Solutions</a></li>
+      <li><a href="#partnerships">Our Partnerships</a></li>
     </ul>
     <div class="image-wrapper">
       <svg
