--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -93,9 +93,9 @@ import GridWrapper from "./GridWrapper.astro";
       </h1>
     </a>
     <ul>
-      <li><a href="#mission">Our mission</a></li>
-      <li><a href="#solutions">Our solutions</a></li>
-      <li><a href="#partnerships">Our partnerships</a></li>
+      <li><a href="#mission">Our Mission</a></li>
+      <li><a href="#solutions">Our Solutions</a></li>
+      <li><a href="#partnerships">Our Partnerships</a></li>
     </ul>
   </GridWrapper>
 </header>
