--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -6,7 +6,10 @@ import Card from "./Card.astro";
 <section id="solutions">
   <GridWrapper>
     <h2 class="category">
-      Our <span class="color">Solutions</span>
+      <span aria-hidden="true">Our </span><span class="color" aria-hidden="true"
+        >Solutions</span
+      >
+      <span class="sr-only">Our solutions</span>
     </h2>
     <div class="picture-wrapper">
       <img
@@ -446,5 +449,16 @@ import Card from "./Card.astro";
     background-color: var(--color-white-warm);
     padding: 0 0.3rem;
     border-radius: 0.3rem;
+  }
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
   }
 </style>
